# ai-email-processor

./: .gitignore  cicd.md  email-processor.code-workspace
classification-service/: Dockerfile  README.md  pyproject.toml  start_services.py
classification-service/.github/workflows/: deploy.yaml
classification-service/src/: classifier.py  client.py  config.json  config_service.py  main.py  mcp_server.py  server.py
classification-service/src/api/: classifier_api.py
classification-service/src/client/: api_client.py  mcp_client.py
classification-service/src/mcp/: classifier_mcp_server.py
classification-service/src/utils/: config.json  config_service.py
data-extraction-service/: README.md  main.py  pyproject.toml
email-db-service/: README.md  business_process_api.py  business_process_models.py  business_process_schemas.py  main.py  models.py  schemas.py  table_schema.sql
email-ingestor-service/: .gitignore  README.md  client.py  db_client.py  gmail_reader.py
email-processing-agent/: README.md  agent.py
email-processor-service/: README.md  client.py  db_client.py  manual_moves_client_llm.py  pyproject.toml  shipping-manual-moves-api-specs.yaml
email_processor/: README.md  client.py  db_client.py  gmail_reader.py  mcp_client.py  pyproject.toml
email_request_service/: README.md  database.py  main.py  models.py  pyproject.toml  (+2 more)
orchestration_agent/: README.md  agent.py  agent_executor.py  main.py  pyproject.toml  remote_agent_connector.py
orchestration_agent/utilities/: agent_registry.json  credentials.json  discovery_client.py  gmail_reader.py
(+15 files in other folders)
