[project]
name = "classification-service"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "click>=8.2.1",
    "fastapi>=0.116.1",
    "langchain>=0.3.27",
    "langchain-google-genai>=2.1.10",
    "mcp[cli]>=1.13.1",
    "uvicorn>=0.35.0",
]
